Create bands similarity matrices with PCA and with audio features

--- a/Explore Band Similarity.ipynb
+++ b/Explore Band Similarity.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -312,27 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.15558782499108548"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca.explained_variance_ratio_[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -387,7 +367,7 @@
    "cell_type": "code",
    "execution_count": 123,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1223,39 +1203,100 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Band Similarity Matrix"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# construct the band similarity matrix using the PCA components\n",
+    "band_similarity_pca = {}\n",
+    "for index1, artist1 in artists_to_analyze.iterrows():\n",
+    "    band_similarity_pca[artist1['artist_name']] = []\n",
+    "    \n",
+    "    for index2, artist2 in artists_to_analyze.iterrows():\n",
+    "                \n",
+    "        euclidean_dist = np.linalg.norm(np.array(artist1[['pc1','pc2','pc3']]) - np.array(artist2[['pc1','pc2','pc3']]))\n",
+    "                \n",
+    "        if euclidean_dist != 0 :\n",
+    "            band_similarity_pca[artist1['artist_name']].append({\n",
+    "                'artist' : artist2['artist_name'],\n",
+    "                'euclidean_dist' : euclidean_dist\n",
+    "            })"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# construct the band similarity matrix using the audio features\n",
+    "band_similarity_af = {}\n",
+    "for index1, artist1 in artists_to_analyze.iterrows():\n",
+    "    band_similarity_af[artist1['artist_name']] = []\n",
+    "    \n",
+    "    for index2, artist2 in artists_to_analyze.iterrows():\n",
+    "                \n",
+    "        euclidean_dist = np.linalg.norm(np.array(artist1.drop(['index','artist_name','pc1','pc2','pc3'])) - np.array(artist2.drop(['index','artist_name','pc1','pc2','pc3'])))\n",
+    "                \n",
+    "        if euclidean_dist != 0 :\n",
+    "            band_similarity_af[artist1['artist_name']].append({\n",
+    "                'artist' : artist2['artist_name'],\n",
+    "                'euclidean_dist' : euclidean_dist\n",
+    "            })"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'artist': 'Sau', 'euclidean_dist': 0.7045776988155984},\n",
+      " {'artist': 'Michael Jackson', 'euclidean_dist': 1.0472424904055606},\n",
+      " {'artist': 'The Beatles', 'euclidean_dist': 1.4038195999272498},\n",
+      " {'artist': 'Blur', 'euclidean_dist': 1.6548515586095687},\n",
+      " {'artist': 'La iaia', 'euclidean_dist': 1.6831706394499968},\n",
+      " {'artist': 'Gorillaz', 'euclidean_dist': 1.99385148148119},\n",
+      " {'artist': 'Pulp', 'euclidean_dist': 2.0179027149227102},\n",
+      " {'artist': 'Els Amics De Les Arts', 'euclidean_dist': 2.1042666682669307},\n",
+      " {'artist': 'Depeche Mode', 'euclidean_dist': 2.1942038689398378},\n",
+      " {'artist': 'Arcade Fire', 'euclidean_dist': 2.316633462991945}]\n",
+      "\n",
+      "[{'artist': 'Enric Montefusco', 'euclidean_dist': 5400.7221100865745},\n",
+      " {'artist': 'Bon Iver', 'euclidean_dist': 6525.402182077907},\n",
+      " {'artist': 'Franz Ferdinand', 'euclidean_dist': 6730.107451661032},\n",
+      " {'artist': 'Inspira', 'euclidean_dist': 7078.81425952282},\n",
+      " {'artist': 'Nirvana', 'euclidean_dist': 10168.656165639723},\n",
+      " {'artist': 'La iaia', 'euclidean_dist': 12975.32213613159},\n",
+      " {'artist': 'Charlotte Gainsbourg', 'euclidean_dist': 13020.553948933502},\n",
+      " {'artist': 'Joan Dausà', 'euclidean_dist': 14439.836323445972},\n",
+      " {'artist': 'Nico Roig', 'euclidean_dist': 16954.22493610665},\n",
+      " {'artist': 'HAIM', 'euclidean_dist': 18719.743311497055}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "artist_name = 'Shakira'\n",
+    "\n",
+    "# top similar artists to an artist using PCA components\n",
+    "pprint(sorted(band_similarity_pca[artist_name], key = lambda k: k[\"euclidean_dist\"])[:10])\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# top similar artists to an artist using all audio features\n",
+    "pprint(sorted(band_similarity_af[artist_name], key = lambda k: k[\"euclidean_dist\"])[:10])"
+   ]
   },
   {
    "cell_type": "code",
